<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dip"
    tools:context="io.github.varunj.sangoshthi_broadcaster.StarterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/startshowcalls_heading"
        android:id="@+id/startshowcalls_heading"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startshowcalls_participants"
        android:text="@string/startshowcalls_participants"
        android:textAlignment="center"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/startshowcalls_initAshas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startshowcalls_initASHA"
        android:layout_alignBottom="@+id/startshowcalls_participants"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp" />

    <Button
        android:text="@string/startshowcalls_initSelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startshowcalls_initSelf"
        android:layout_above="@+id/startshowcalls_initASHA"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp" />


</RelativeLayout>
